<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeWriteActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="right"
        android:background="@drawable/round_outline_button"
        android:text="@string/upload"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:fontFamily="@font/godo_m"/>
    <EditText
        android:id="@+id/noticeWriteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:fontFamily="@font/godo_m"/>

    <EditText
        android:id="@+id/noticeWriteContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/edge"
        android:hint="@string/contents_hint"
        android:gravity="top"
        android:fontFamily="@font/godo_m"/>

</LinearLayout>