<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/gachon_icon"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/admin_main_title"
        android:textColor="#3947d1"
        android:textAlignment="center"
        android:textSize="26dp"
        android:fontFamily="@font/godo_m"/>

    <TextView
        android:id="@+id/noticeMngTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="20dp"
        android:background="@drawable/underbar_button"
        android:text="@string/notice_management"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:fontFamily="@font/godo_m"/>
    <TextView
        android:id="@+id/busLocationTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="20dp"
        android:background="@drawable/underbar_button"
        android:text="@string/bus_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:fontFamily="@font/godo_m"/>
    <TextView
        android:id="@+id/mngInfoTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="20dp"
        android:background="@drawable/underbar_button"
        android:text="@string/manage_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:fontFamily="@font/godo_m"/>


</LinearLayout>