<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MngInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/gachon_icon"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_main_title"
                android:textColor="#3947d1"
                android:textAlignment="center"
                android:textSize="26dp"
                android:fontFamily="@font/godo_m"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/manage_info"
                android:textColor="#ce3a4c"
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="@font/godo_m"/>

            <LinearLayout
                android:id="@+id/adminCodeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_info_management"
                        android:fontFamily="@font/godo_m"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/addAdminButton"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="30dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_gravity="right"
                        android:background="@drawable/round_outline_button"
                        android:text="@string/add_admin"
                        android:textAllCaps="false"
                        android:fontFamily="@font/godo_m"
                        android:textSize="17dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_abbrev"
                        android:fontFamily="@font/godo_m"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>
                    <EditText
                        android:id="@+id/adminCodeEditText"
                        android:layout_marginLeft="35dp"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@drawable/white_edge"
                        android:hint="@string/code"
                        android:textSize="16dp"
                        android:fontFamily="@font/godo_m"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/driverCodeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_code_management"
                        android:fontFamily="@font/godo_m"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/addDriverButton"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="30dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_gravity="right"
                        android:background="@drawable/round_outline_button"
                        android:text="@string/add_driver"
                        android:textAllCaps="false"
                        android:fontFamily="@font/godo_m"
                        android:textSize="18dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>